update .gitignore to include infinityVenv

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 ##############
+# Dev Specific GitIgnore
+##############
+
+# Venv
+infinityVenv/
+
+##############
 # Default Python GitIgnore stuff
 ##############
 
